--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/hendy643/lodestone-java</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -68,9 +75,9 @@
             <version>v1.2.2</version>
         </dependency>
         <dependency>
-            <groupId>com.github.wompus</groupId>
-            <artifactId>lodestone4j</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>group.teafc.lodestone</groupId>
+            <artifactId>lodestone</artifactId>
+            <version>0.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.discord4j</groupId>
