--- a/src/main/resources/application-bot.properties
+++ b/src/main/resources/application-bot.properties
@@ -1,8 +1,8 @@
 bot.discord.token=@discord.token@
 bot.discord.client.id=@discord.client.id@
 
-bot.ids.owner.fc=@ids.owner.fc@
-bot.ids.owner.id=@ids.owner.id@
+bot.ids.owner.fc=@discord.owner.server@
+bot.ids.owner.id=@discord.owner.id@
 
 bot.config.user-agent=Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.71 Safari/537.36
-bot.config.lodestone.baseUrl=https://eu.finalfantasyxiv.com/lodestone/%s/%s/
+
