--- a/src/main/resources/application-db.properties
+++ b/src/main/resources/application-db.properties
@@ -1,6 +1,5 @@
-spring.datasource.url=@db.url@
-spring.datasource.driver-class-name=@db.driver@
-spring.datasource.username=@db.uname@
-spring.datasource.password=@db.pwd@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=@db.dialect@
+spring.data.mongodb.host=@db.host@
+spring.data.mongodb.port=@db.port@
+spring.data.mongodb.database=@db.name@
+spring.data.mongodb.username=@db.uname@
+spring.data.mongodb.password=@db.pwd@
